force-app/main/default/objects/EnvSettings__c/fields/BBLGlobalCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>BBLGlobalCustomerNumber__c</fullName>
    <description>Used for Speed Test callout</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BBL Global Customer Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>