force-app/main/default/objects/EnvSettings__c/fields/EndPoint_Token__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EndPoint Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>