force-app/main/default/objects/EnvSettings__c/fields/Tashtiot_Email__c.field-meta.xml
<CustomField>
    <fullName>Tashtiot_Email__c</fullName>
    <defaultValue>&quot;Tashtiyot@yes.co.il&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Tashtiot Email</label>
    <type>Email</type>
</CustomField>